--- a/_config.yml
+++ b/_config.yml
@@ -7,10 +7,10 @@ pygments: true
 
 # configuration required for some pages
 
-domain: blog.example.com
-title: My Blog Title
-author: Me
-email: me@example.com
+domain: blog.luxifer.fr
+title: Blog de Florent Viel
+author: Florent Viel
+email: florent.viel69@gmail.com
 
 # configuration for ehancements, uncomment to enable
 
