--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # standard jekyll configuration
 
 permalink: pretty
-exclude: ['Rakefile', 'config.rb', 'vendor']
+exclude: ['Rakefile', 'config.rb', 'vendor', 'Gemfile', 'Gemfile.lock']
 markdown: kramdown
 highlighter: pygments
 
