add: fork button to each posts

--- a/_config.yml
+++ b/_config.yml
@@ -35,3 +35,6 @@ copyright:
   url:      http://florentviel.com
   type_title:   Tous droits réservés
   type_url: http://creativecommons.org/licenses/by-nc/2.5
+
+github:
+  repo: https://github.com/luxifer/blog
