Mod: move from kramdown to redcarpet

--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 
 permalink: pretty
 exclude: ['Gemfile', 'Gemfile.lock']
-markdown: kramdown
+markdown: redcarpet
 highlighter: pygments
 gems: [jekyll-geo-pattern]
 
