--- a/_config.yml
+++ b/_config.yml
@@ -2,8 +2,8 @@
 
 permalink: pretty
 exclude: ['Gemfile', 'Gemfile.lock']
-markdown: redcarpet
-highlighter: pygments
+markdown:    kramdown
+highlighter: rouge
 
 # configuration required for some pages
 
@@ -42,6 +42,7 @@ gems:
   - jekyll-sitemap
   - jekyll-mentions
   - jekyll-feed
+  - jekyll-paginate
 
 feed:
   path: atom.xml
